<resources>
    <string name="app_name">SHOP</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_precio_unitario">Precio Unitario:</string>
    <string name="hint_unidades_stock">Unidades En Stock:</string>
    <string name="hint_categoria">Categoria:</string>
    <string name="btn_guarda">Guardar</string>
    <string name="menu_nuevo">Nuevo registro</string>
    <string-array name="categorias">
        <item>Perifericos</item>
        <item>Sonido</item>
        <item>Procesadores</item>
        <item>Graficas</item>
        <item>Almacenamiento</item>
    </string-array>
    <string-array name="filtro_categorias">
        <item>Todos</item>
        <item>Perifericos</item>
        <item>Sonido</item>
        <item>Procesadores</item>
        <item>Graficas</item>
        <item>Almacenamiento</item>
    </string-array>
</resources>