<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/hint_nombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewPrecioUnitario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/hint_precio_unitario" />

        <EditText
            android:id="@+id/txtPrecioUnitario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@+id/viewPrecioUnitario"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewUnidadesStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/hint_unidades_stock" />

        <EditText
            android:id="@+id/txtUnidadesStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewUnidadesStock"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/hint_categoria" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_guarda"
            android:layout_marginTop="32dp"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>